HTML 5 proper tag adding and CSS change

--- a/Website/Resources/vr.css
+++ b/Website/Resources/vr.css
@@ -38,7 +38,7 @@ td {
 }
 header {
     height: 310px;
-    background-color: #00021a;
+    background-color: #089fcc;
     padding: 20px;
     text-align: center;
     background: url(Images/horizontint2.jpg);
